--- a/config/hypr/configs/keybinds.conf
+++ b/config/hypr/configs/keybinds.conf
@@ -6,83 +6,56 @@
 
 $mainMod = SUPER
 $scriptsDir = $HOME/.config/hypr/scripts
-$hyprDir = $HOME/.config/hypr
-$fullmenu = $scriptsDir/fullmenu
-$volume = $scriptsDir/volume
-$screenshot = $scriptsDir/screenshot
-$files = thunar
-$browser = firefox
-$term = foot
-$menu = $scriptsDir/menu
-$backlight = $scriptsDir/brightness
-$kbacklight = $scriptsDir/brightness-kbd
-$lock = $scriptsDir/lockscreen
-$waybar-style = $scriptsDir/waybar-style-change
-$wallpaper-change = $scriptsDir/changeWallpaper2
-$wallpaper-switcher = $scriptsDir/wallpaper-switcher
-$layout-switcher = $scriptsDir/layout-switcher
-$hint = $scriptsDir/keyhint
-
-##edit wofi beats links on /hypr/scripts/wofi-beats
-$wofi_beats = $scriptsDir/wofi-beats
-
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod SHIFT, C, exec, hyprctl reload
-bind = $mainMod SHIFT, D, exec, $fullmenu
-bind = $mainMod, D, exec, $menu
-bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod SHIFT, Space, togglefloating, 
-bind = $mainMod, F, fullscreen
-bind = $mainMod, Q, killactive,
-bind = $mainMod, Return, exec, $term
-bind = $mainMod, T, exec, $files
-bind = CTRL ALT, L, exec, $lock
-bind = $mainMod CTRL, S, exec, $wofi_beats
-bind = $mainMod, W, exec, $wallpaper-change
-bind = $mainMod SHIFT, W, exec, $waybar-style
-bind = $mainMod CTRL, W, exec, $wallpaper-switcher
-bind = $mainMod ALT, W, exec, $layout-switcher
-bind = $mainMod, H, exec, $hint
+bind = $mainMod SHIFT CTRL, R, exec, hyprctl reload
+bind = $mainMod, Return, exec, foot
+bind = $mainMod, D, exec, $scriptsDir/launchPad.sh
+bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar
+bind = $mainMod, Space, togglefloating,
+bind = $mainMod, F, fullscreen
+bind = $mainMod, T, exec, thunar
+bind = CTRL ALT, L, exec, $scriptsDir/lockScreen.sh
+bind = $mainMod, W, exec, $scriptsDir/randomWallpaper.sh
+bind = $mainMod CTRL, W, exec, $scriptsDir/wallpaperSelecter.sh
+bind = $mainMod SHIFT, W, exec, $scriptsDir/waybarStyleChange.sh
+bind = $mainMod SHIFT, code:61, exec, $scriptsDir/quickEdit.sh
+bind = $mainMod CTRL, S, exec, $scriptsDir/wofiBeats.sh
 
 
 # effect
 
 #bind = $mainMod SHIFT, M, exec, hyprctl dispatch splitratio -0.3
-#bind = $mainMod SHIFT, Y, exec, $term --class clock -T clock -e tty-clock -c -C 7 -r -s -f "%A, %B, %d"
+#bind = $mainMod SHIFT, Y, exec, foot --class clock -T clock -e tty-clock -c -C 7 -r -s -f "%A, %B, %d"
 
 bind = $mainMod CTRL, D, layoutmsg, removemaster
 bind = $mainMod, Escape, exec, hyprctl kill
 bind = $mainMod, I, layoutmsg, addmaster
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
-bind = $mainMod, Space, exec, $scriptsDir/changeLayout
+bind = $mainMod, N, layoutmsg, cyclenext
+bind = $mainMod SHIFT, N, layoutmsg, cycleprev
+bind = $mainMod SHIFT, Space, layoutmsg, swapwithmaster
 
 # Special Keys / Hot Keys
 
-bind = , xf86audioraisevolume, exec, $volume --inc #volume up
-bind = , xf86audiolowervolume, exec, $volume --dec #volume down
-bind = , xf86AudioMicMute, exec, $volume --toggle-mic #mute mic
+bind = , xf86audioraisevolume, exec, $scriptsDir/volume.sh --inc #volume up
+bind = , xf86audiolowervolume, exec, $scriptsDir/volume.sh --dec #volume down
+bind = , xf86AudioMicMute, exec, $scriptsDir/volume.sh --toggle-mic #mute mic
 bind = , xf86Launch1, exec, rog-control-center # ASUS Armory crate button
-bind = , xf86audiomute, exec, $volume --toggle #FN+F1
-bind = , xf86KbdBrightnessDown, exec, $kbacklight --dec #FN+F2 Keyboard brightness down
-bind = , xf86KbdBrightnessUp, exec, $kbacklight --inc #FN+F3 Keyboard brightnes up
+bind = , xf86audiomute, exec, $scriptsDir/volume.sh --toggle #FN+F1
+bind = , xf86KbdBrightnessDown, exec, $scriptsDir/brightnessKbd.sh --dec #FN+F2 Keyboard brightness down
+bind = , xf86KbdBrightnessUp, exec, $scriptsDir/brightnessKbd.sh --inc #FN+F3 Keyboard brightnes up
 bind = , xf86Launch3, exec, asusctl led-mode -n #FN+F4 Switch keyboard RGB profile 
 bind = , xf86Launch4, exec, asusctl profile -n  #FN+F5 change of fan profiles (Quite, Balance Performance)
-bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
-bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
+bind = , xf86MonBrightnessDown, exec, $scriptsDir/brightness.sh --dec #FN+F7
+bind = , xf86MonBrightnessUp, exec, $scriptsDir/brightness.sh --inc #FN+F8
 bind = , xf86TouchpadToggle, exec, ~/.config/hypr/scripts/touchpad.sh #FN+10 disable touchpad
 
-
-bind = , xf86Sleep, exec, $lock #FN+F11 (sleep button) 
-bind = , xf86Rfkill, exec, ~/.config/hypr/scripts/airplane-mode.sh #Airplane mode FN+F12 
+bind = , xf86Sleep, exec, $scriptsDir/lockScreen.sh #FN+F11 (sleep button) 
+bind = , xf86Rfkill, exec, ~/.config/hypr/scripts/airplaneMode.sh #Airplane mode FN+F12 
 
 # triggered when external monitor is connected and closing lid
-bindl=,switch:Lid Switch, exec, ~/.config/hypr/scripts/switch-lid.sh
+bindl=,switch:Lid Switch, exec, ~/.config/hypr/scripts/switchLid.sh
 
 bind = , xf86audioplay, exec, playerctl play-pause 
 bind = , xf86audionext, exec, playerctl next
@@ -94,22 +67,22 @@ bind = , xf86audiostop, exec, playerctl stop
 #bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 
 # Resize
-binde = $mainMod SHIFT, H, resizeactive,-50 0
-binde = $mainMod SHIFT, L, resizeactive,50 0
-binde = $mainMod SHIFT, K, resizeactive,0 -50
-binde = $mainMod SHIFT, J, resizeactive,0 50
+binde = $mainMod CTRL, H, resizeactive,-50 0
+binde = $mainMod CTRL, L, resizeactive,50 0
+binde = $mainMod CTRL, K, resizeactive,0 -50
+binde = $mainMod CTRL, J, resizeactive,0 50
 
 # Move
-bind = $mainMod CTRL, H, movewindow, l
-bind = $mainMod CTRL, L, movewindow, r
-bind = $mainMod CTRL, K, movewindow, u
-bind = $mainMod CTRL, J, movewindow, d
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Special workspace
 bind = $mainMod SHIFT, U, movetoworkspace, special
@@ -173,9 +146,11 @@ bind = ALT SHIFT, tab, workspace, m-1
 
 
 # Screenshot keybindings NOTE:
-#bind = , Print, exec, $screenshot --now
-bind = $mainMod, Print, exec, $screenshot --now
-bind = $mainMod CTRL SHIFT, Print, exec, $screenshot --in5
-#bind = CTRL, Print, exec, $screenshot --win
-#bind = SHIFT, Print, exec, $screenshot --area
-bind = $mainMod SHIFT, Print, exec, $screenshot --area
+#bind = , Print, exec, $scriptsDir/screenshot.sh --area
+bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod, Print, exec, $scriptsDir/screenshot.sh --now
+bind = $mainMod ALT, Print, exec, $scriptsDir/screenshot.sh --win
+#bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/screenshot.sh --in5
+
+# clip manage
+bind = $mainMod, V, exec, $scriptsDir/clipManage.sh
