--- a/config/hypr/wofi/launchPad/config
+++ b/config/hypr/wofi/launchPad/config
@@ -6,12 +6,12 @@ prompt=Apps
 normal_window=true
 layer=overlay
 term=foot
-columns=1
+columns=3
 
 ## Geometry
-width=30%
-height=30%
-location=top_left
+width=60%
+height=40%
+location=bottom_left
 orientation=vertical
 halign=fill
 line_wrap=off
