fix: update readme. update hyprland rule. fix btop theme path.

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -18,15 +18,16 @@ general {
   #one color
   col.inactive_border = rgb(6c7086)
   resize_on_border = true
-  layout = master # master or dwindle 
+  no_cursor_warps = true
+  layout = master # master or dwindle
 }
 
 decoration {
   rounding = 4
   multisample_edges = true
 
-  active_opacity = 1.0
-  inactive_opacity = 1.0
+  active_opacity = 0.9
+  inactive_opacity = 0.6
   fullscreen_opacity = 1.0
 
   blur = yes
@@ -39,7 +40,7 @@ decoration {
   shadow_render_power = 3
   col.shadow = rgba(1a1a1aee)
 
-  dim_inactive = true
+  dim_inactive = 0
   dim_strength = 0.3
 }
 
@@ -71,7 +72,8 @@ input {
   numlock_by_default=0
   left_handed=0
   follow_mouse=1
-  float_switch_override_focus=0
+  mouse_refocus=1
+  float_switch_override_focus=1
 
   touchpad {
     disable_while_typing=1
@@ -107,7 +109,7 @@ dwindle {
   pseudotile = false
   force_split = 2
   special_scale_factor = 0.8
-  no_gaps_when_only = 1 
+  no_gaps_when_only = 1
   use_active_for_splits = no
 }
 
@@ -124,5 +126,3 @@ binds {
   allow_workspace_cycles=1
   pass_mouse_when_bound=0
 }
-
-
