--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -30,11 +30,6 @@ decoration {
   inactive_opacity = 0.6
   fullscreen_opacity = 1.0
 
-  blur = yes
-  blur_size = 8
-  blur_passes = 2
-  blur_new_optimizations = true
-
   drop_shadow = true
   shadow_range = 4
   shadow_render_power = 3
@@ -42,6 +37,13 @@ decoration {
 
   dim_inactive = 0
   dim_strength = 0.3
+
+  blur {
+    enabled = true	
+    size = 8
+    passes = 2
+    new_optimizations = true
+  }
 }
 
 #blurls = waybar
@@ -91,7 +93,7 @@ gestures {
   workspace_swipe_invert=1
   workspace_swipe_min_speed_to_force=30
   workspace_swipe_cancel_ratio=0.5
-  workspace_swipe_create_new=1 
+  workspace_swipe_create_new=1
   workspace_swipe_forever=1
 }
 
