1. delete waybar default style. 2. fix waybar workspace. 3. update hyprland conf 4. change keybinds 5. fix code(need set "window.titleBarStyle":"custom")

--- a/config/code-flags.conf
+++ b/config/code-flags.conf
@@ -1,2 +1,4 @@
---ozone-platform=wayland
+--enable-features=WaylandWindowDecorations
+--ozone-platform-hint=auto
 --enable-wayland-ime
+--disable-gpu-sandbox
