--- a/config/hypr/configs/exec.conf
+++ b/config/hypr/configs/exec.conf
@@ -15,11 +15,10 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = $scriptsDir/startup.sh
 #exec-once = blueman-applet &
 exec-once = nm-applet --indicator &
-#exec-once = rog-control-center &
 
 # Arch Linux Specific
 exec-once = $scriptsDir/portalArchHyprland.sh #arch for proper screen sharing
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 #arch
+exec-once = /usr/lib/polkit-kde-authentication-agent-1  #arch
 
 #Catpuccin Themes
 source = $themes/frappe.conf
@@ -28,7 +27,7 @@ source = $themes/frappe.conf
 # source = $themes/mocha.conf
 
 # this is where you set your environment-variables
-env = QT_QPA_PLATFORMTHEME,qt5ct #necessary to run qt5ct properly
+env = QT_QPA_PLATFORMTHEME,qt5ct  #necessary to run qt5ct properly
 #env = GDK_BACKEND,wayland;x11
 #env = QT_QPA_PLATFORM,wayland;xcb
 #env = CLUTTER_BACKEND,wayland
@@ -43,6 +42,8 @@ env = QT_QPA_PLATFORMTHEME,qt5ct #necessary to run qt5ct properly
 # env = XCURSOR_THEME,
 # env = XCURSOR_SIZE,
 
+env = OBSIDIAN_USE_WAYLAND,1
+
 # NVIDIA  STUFF check out Hyprland-Wiki for more details https://wiki.hyprland.org/Nvidia/
 # This is from Hyprland Wiki but my Hyprland keeps crashing when I enabled some of this variables (first one cursors will be enabled if nvidia-detected)
 #env = WLR_NO_HARDWARE_CURSORS,1
@@ -54,7 +55,7 @@ env = QT_QPA_PLATFORMTHEME,qt5ct #necessary to run qt5ct properly
 
 # start
 exec-once = fcitx5
-exec-once = wl-paste --type text --watch cliphist store  #Stores only text data
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "McMojava Cursors"
 exec-once = foot --server # foot client mode
