--- a/config/hypr/configs/keybinds.conf
+++ b/config/hypr/configs/keybinds.conf
@@ -16,7 +16,7 @@ bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar
 bind = $mainMod, Space, togglefloating,
 bind = $mainMod, F, fullscreen
 bind = $mainMod, T, exec, thunar
-bind = CTRL ALT, L, exec, $scriptsDir/lockScreen.sh
+#bind = CTRL ALT, L, exec, $scriptsDir/lockScreen.sh
 bind = $mainMod, W, exec, $scriptsDir/randomWallpaper.sh
 bind = $mainMod CTRL, W, exec, $scriptsDir/wallpaperSelecter.sh
 bind = $mainMod SHIFT, W, exec, $scriptsDir/waybarStyleChange.sh
@@ -101,32 +101,32 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window and follow to workspace
-bind = $mainMod CTRL, 1, movetoworkspace, 1
-bind = $mainMod CTRL, 2, movetoworkspace, 2
-bind = $mainMod CTRL, 3, movetoworkspace, 3
-bind = $mainMod CTRL, 4, movetoworkspace, 4
-bind = $mainMod CTRL, 5, movetoworkspace, 5
-bind = $mainMod CTRL, 6, movetoworkspace, 6
-bind = $mainMod CTRL, 7, movetoworkspace, 7
-bind = $mainMod CTRL, 8, movetoworkspace, 8
-bind = $mainMod CTRL, 9, movetoworkspace, 9
-bind = $mainMod CTRL, 0, movetoworkspace, 10
-bind = $mainMod CTRL, bracketleft, movetoworkspace, -1
-bind = $mainMod CTRL, bracketright, movetoworkspace, +1
+bind = $mainMod SHIFT , 1, movetoworkspace, 1
+bind = $mainMod SHIFT , 2, movetoworkspace, 2
+bind = $mainMod SHIFT , 3, movetoworkspace, 3
+bind = $mainMod SHIFT , 4, movetoworkspace, 4
+bind = $mainMod SHIFT , 5, movetoworkspace, 5
+bind = $mainMod SHIFT , 6, movetoworkspace, 6
+bind = $mainMod SHIFT , 7, movetoworkspace, 7
+bind = $mainMod SHIFT , 8, movetoworkspace, 8
+bind = $mainMod SHIFT , 9, movetoworkspace, 9
+bind = $mainMod SHIFT , 0, movetoworkspace, 10
+bind = $mainMod SHIFT , bracketleft, movetoworkspace, -1
+bind = $mainMod SHIFT , bracketright, movetoworkspace, +1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
-bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
-bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
+# bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+# bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+# bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+# bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+# bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+# bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+# bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+# bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+# bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+# bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+# bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
+# bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -139,10 +139,11 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, G, togglegroup
-bind = $mainMod, tab, workspace, m+1
-bind = $mainMod SHIFT, tab, workspace, m-1
-bind = ALT, tab, workspace, m+1
-bind = ALT SHIFT, tab, workspace, m-1
+bind = $mainMod, tab, workspace, previous
+# bind = $mainMod, tab, workspace, m+1
+# bind = $mainMod SHIFT, tab, workspace, m-1
+# bind = ALT, tab, workspace, m+1
+# bind = ALT SHIFT, tab, workspace, m-1
 
 
 # Screenshot keybindings NOTE:
