--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -24,26 +24,23 @@ general {
 
 decoration {
   rounding = 4
-  multisample_edges = true
-
-  active_opacity = 0.9
-  inactive_opacity = 0.6
-  fullscreen_opacity = 1.0
-
   drop_shadow = true
   shadow_range = 4
   shadow_render_power = 3
   col.shadow = rgba(1a1a1aee)
+  active_opacity = 1
+  inactive_opacity = 0.6
 
   dim_inactive = 0
   dim_strength = 0.3
 
   blur {
-    enabled = true	
-    size = 8
+    enabled = true 
+    size = 7
     passes = 2
     new_optimizations = true
   }
+
 }
 
 #blurls = waybar
@@ -93,7 +90,7 @@ gestures {
   workspace_swipe_invert=1
   workspace_swipe_min_speed_to_force=30
   workspace_swipe_cancel_ratio=0.5
-  workspace_swipe_create_new=1
+  workspace_swipe_create_new=1 
   workspace_swipe_forever=1
 }
 
@@ -105,6 +102,7 @@ misc {
   enable_swallow = true
   no_direct_scanout = true #for fullscreen games
   focus_on_activate = true
+  vfr = true # allower the amount of sent frames when nothing is happening on-screen
 }
 
 dwindle {
