--- a/config/hypr/configs/window_rules.conf
+++ b/config/hypr/configs/window_rules.conf
@@ -17,18 +17,21 @@ windowrule = pin, swappy
 windowrule = center, swappy
 
 # windowrule v2
-windowrulev2 = workspace 1, class:^(google-chrome-beta)$
-windowrulev2 = workspace 5, class:^(google-chrome)$
+windowrulev2 = workspace 1, class:^(google-chrome)$
+windowrulev2 = workspace 5, class:^(floorp)$
 windowrulev2 = workspace 2, class:^(code-)(.*)$
 windowrulev2 = workspace 3, class:^(obsidian)$
-windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 5 silent, class:^(Steam)$,title:^(Steam)$
+windowrulev2 = workspace 6, class:^(com.obsproject.Studio)$
 windowrulev2 = float, title:^(File Operation Progress)$
 
 #opacity (transparent) #enable as desired
 # windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
+windowrulev2 = opacity 1 override 1 override, class:^(floorp)$
+windowrulev2 = opacity 1 override 1 override, class:^(obsidian)$
+windowrulev2 = opacity 1 override 1 override, class:^(code.*)$
 windowrulev2 = opacity 1 override 1 override, pinned:1
 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
 #windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
 #windowrulev2 = opacity 0.8 0.8, pinned:1
+
